--- a/app/views/layouts/_drawer.html.erb
+++ b/app/views/layouts/_drawer.html.erb
@@ -13,9 +13,18 @@
                     </div>
                 </li>
                 <li class="w-full flex items-center">Home</li>
-                <li class="w-full flex items-center">Wishlist</li>
-                <li class="w-full flex items-center">Account</li>
-                <li class="w-full flex items-center">Settings</li>
+                <li class="w-full flex items-center">
+                    <div class="indicator">
+                        <div class="indicator-item indicator-bottom">
+                            <button class="btn btn-primary">Coming soon</button>
+                        </div>
+                        <div>
+                            <p>Wishlist</p>
+                        </div>
+                    </div>
+                </li>
+                <%# <li class="w-full flex items-center">Account</li> %>
+                <%# <li class="w-full flex items-center">Settings</li> %>
             </ul>
         </div>
     </div>
