--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -35,7 +35,72 @@
         <div id="books-container" class="pb-10" data-controller="book-search">
           <div class="grid grid-cols-6 gap-6">
             <% @books.each do |book| %>
-              <%= render "book", book: book%>
+              <div
+                class="card col-span-6 lg:col-span-3 shadow-xl relative lg:cursor-default cursor-pointer"
+                data-book-id="<%= book.id %>"
+              >
+                <div class="card-body">
+                  <div class="flex space-x-5">
+                    <div class="w-2/7 lg:w-2/8" data-action="click->book-review#open">
+                      <% if book.cover_image.attached? %>
+                        <%= image_tag book.cover_image %>
+                      <% else %>
+                        <p>No cover image available</p>
+                      <% end %>
+                    </div>
+                    <div class="w-5/7 lg:w-6/8">
+                      <div class="h-2/4">
+                        <div class="flex">
+                          <h3 class="font-semibold text-lg md:text-xl w-7/8"><%= book.title.truncate(17) %></h3>
+                          <%= turbo_frame_tag "book_#{book.id}_bookmark" do %>
+                            <%= render 'bookmarks/bookmark_button', book: book, bookmarked: current_user.bookmarks.exists?(book: book) %>
+                          <% end %>
+                        </div>
+                        <div class="w-7/8 flex justify-center items-center space-x-2 text-sm">
+                          <span>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cloud-upload" viewBox="0 0 16 16">
+                              <path fill-rule="evenodd" d="M4.406 1.342A5.53 5.53 0 0 1 8 0c2.69 0 4.923 2 5.166 4.579C14.758 4.804 16 6.137 16 7.773 16 9.569 14.502 11 12.687 11H10a.5.5 0 0 1 0-1h2.688C13.979 10 15 8.988 15 7.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 2.825 10.328 1 8 1a4.53 4.53 0 0 0-2.941 1.1c-.757.652-1.153 1.438-1.153 2.055v.448l-.445.049C2.064 4.805 1 5.952 1 7.318 1 8.785 2.23 10 3.781 10H6a.5.5 0 0 1 0 1H3.781C1.708 11 0 9.366 0 7.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383"/>
+                              <path fill-rule="evenodd" d="M7.646 4.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V14.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708z"/>
+                            </svg>
+                          </span>
+                          <p>Added by <strong><%= book.user.first_name %> <%= book.user.last_name %></strong></p>
+                        </div>
+                        <p class="mt-3 text-xs hidden md:block"><%= book.description.truncate(110) %></p>
+                      </div>
+                      <div class="h-3/4 lg:h-1/4 space-x-2 flex items-center align-center">
+                        <span class="text-lg md:text-xl font-semibold">
+                          <%= (book.reviews.average(:rating) || 0).round(0.5) %>
+                        </span>
+                        <div class="rating rating-md md:rating-xs">
+                          <% 5.times do |i| %>
+                            <input disabled type="radio" name="rating-<%= book.id %>" class="mask mask-star-2 bg-orange-100" <%= 'checked' if (book.reviews.average(:rating) || 0) > i %> aria-label="<%= i + 1 %> star">
+                          <% end %>
+                        </div>  
+                        <span class="hidden md:block">(<%= book.reviews.count %> Reviews)</span>
+                      </div>
+                      <div class="space-x-4 h-1/4 lg:flex hidden items-end">
+                        <label for="review-drawer" 
+                            class="btn py-6 rounded-xl btn-outline text-blue-500 border-[#E5E5E7] cursor-pointer"
+                            data-book-id="<%= book.id %>"
+                            data-action="click->book-review#open"
+                        >
+                          Review
+                        </label>
+                        <% if book.pdf_file.attached? %>
+                          <%= link_to "Read", download_book_path(book), 
+                              class: "btn py-6 rounded-xl bg-blue-500 text-white",
+                              method: :get,
+                              data: { action: "click->book-review#stopPropagation" } %>
+                        <% else %>
+                          <button class="btn py-6 rounded-xl bg-blue-500 text-white" disabled>
+                            No PDF Available
+                          </button>
+                        <% end %>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             <% end %>
           </div>
         </div>
@@ -99,41 +164,51 @@
               <p data-book-review-target="description"></p>
             </div>
 
-            <div class="mt-8 space-y-12">
-              <div data-book-review-target="allReviewsSection" class="space-y-4">
-                <h3 class="text-xl font-bold">All Reviews</h3>
-                <div data-book-review-target="allReviewsList" class="space-y-4"></div>
+            <div data-book-review-target="userReviewSection" class="hidden space-y-3">
+              <h3 class="text-xl font-bold">Your Review</h3>
+              
+              <div>
+                <p>Your Rating</p>
+                <div data-book-review-target="userReviewRating" class="rating rating-sm"></div>
               </div>
 
-              <div data-book-review-target="reviewForm">
-                <%= form_with(model: Review.new, url: reviews_path, local: false, class: "space-y-3") do |form| %>
-                  <h3 class="text-xl font-bold">Review</h3>
-                  
-                  <%= form.hidden_field :book_id, data: { book_review_target: "bookId" } %>
-                  
-                  <div>
-                    <p>Rating</p>
-                    <div class="rating rating-sm">
-                      <% 5.times do |i| %>
-                        <%= form.radio_button :rating, i+1, class: "mask mask-star-2 bg-orange-400", "aria-label": "#{i+1} star" %>
-                      <% end %>
-                    </div>
-                  </div>
-
-                  <div>
-                    <p>About</p>
-                    <%= form.text_area :content, class: "textarea textarea-bordered w-full mt-3", placeholder: "Write your review..." %>
-                    <div class="flex justify-between mt-4">
-                      <%= form.submit "Add review", class: "btn bg-blue-500 text-white mt-4 rounded-xl" %>
-                      <button class="btn text-blue-500 mt-4 rounded-xl ml-auto">Read book</button>
-                    </div>
-                  </div>
-                <% end %>
+              <div>
+                <p>Your Thoughts</p>
+                <div class="p-3 bg-white rounded-lg mt-2">
+                  <p data-book-review-target="userReviewContent"></p>
+                </div>
+                
+                <div class="flex justify-end mt-4">
+                  <button class="btn text-blue-500 rounded-xl">Read book</button>
+                </div>
               </div>
             </div>
 
+            <div data-book-review-target="reviewForm">
+              <%= form_with(model: Review.new, url: reviews_path, local: false, class: "space-y-3") do |form| %>
+                <h3 class="text-xl font-bold">Review</h3>
+                
+                <%= form.hidden_field :book_id, data: { book_review_target: "bookId" } %>
+                
+                <div>
+                  <p>Rating</p>
+                  <div class="rating rating-sm">
+                    <% 5.times do |i| %>
+                      <%= form.radio_button :rating, i+1, class: "mask mask-star-2 bg-orange-400", "aria-label": "#{i+1} star" %>
+                    <% end %>
+                  </div>
+                </div>
 
-
+                <div>
+                  <p>About</p>
+                  <%= form.text_area :content, class: "textarea textarea-bordered w-full mt-3", placeholder: "Write your review..." %>
+                  <div class="flex justify-between mt-4">
+                    <%= form.submit "Add review", class: "btn bg-blue-500 text-white mt-4 rounded-xl" %>
+                    <button class="md:hidden btn text-blue-500 mt-4 rounded-xl ml-auto">Read book</button>
+                  </div>
+                </div>
+              <% end %>
+            </div>
           </div>
 
         </div>
