--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -164,24 +164,9 @@
               <p data-book-review-target="description"></p>
             </div>
 
-            <div data-book-review-target="userReviewSection" class="hidden space-y-3">
-              <h3 class="text-xl font-bold">Your Review</h3>
-              
-              <div>
-                <p>Your Rating</p>
-                <div data-book-review-target="userReviewRating" class="rating rating-sm"></div>
-              </div>
-
-              <div>
-                <p>Your Thoughts</p>
-                <div class="p-3 bg-white rounded-lg mt-2">
-                  <p data-book-review-target="userReviewContent"></p>
-                </div>
-                
-                <div class="flex justify-end mt-4">
-                  <button class="btn text-blue-500 rounded-xl">Read book</button>
-                </div>
-              </div>
+            <div data-book-review-target="allReviewsSection" class="space-y-4">
+              <h3 class="text-xl font-bold">All Reviews</h3>
+              <div data-book-review-target="allReviewsList" class="space-y-4"></div>
             </div>
 
             <div data-book-review-target="reviewForm">
