--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,20 +7,7 @@
         <div class="space-y-4">
           <h1 class="md:text-3xl md:font-bold font-semibold text-xl">Books</h1>
           <div class="flex">
-            <div class="flex flex-wrap gap-2 w-full lg:w-6/8" data-controller="book-search">
-              <% Category.all.each do |category| %>
-                <label class="cursor-pointer">
-                  <input type="checkbox"
-                        class="hidden peer"
-                        value="<%= category.name %>"
-                        data-book-search-target="checkbox"
-                        <%= "checked" if params[:categories]&.include?(category.name) %> />
-                  <span class="btn bg-[#F9F9F9] text-gray-700 shadow-none border-none w-fit peer-checked:bg-orange-500 peer-checked:text-white">
-                    <%= category.name %>
-                  </span>
-                </label>
-              <% end %>
-            </div>
+            <%= render "category_filters" %>
             <div class="hidden lg:flex w-2/8 justify-end">
               <div data-controller="book-search" class="ml-auto">
                 <%= render "select_sort" %>
@@ -32,172 +19,9 @@
         <h2 class="text-xl mb-6 font-semibold">
           <%= params[:query].present? ? 'Search Results' : 'Recently added' %>
         </h2>
-        <div id="books-container" class="pb-10" data-controller="book-search">
-          <div class="grid grid-cols-6 gap-6">
-            <% @books.each do |book| %>
-              <div
-                class="card col-span-6 lg:col-span-3 shadow-xl relative lg:cursor-default cursor-pointer"
-                data-book-id="<%= book.id %>"
-              >
-                <div class="card-body">
-                  <div class="flex space-x-5">
-                    <div class="w-2/7 lg:w-2/8" data-action="click->book-review#open">
-                      <% if book.cover_image.attached? %>
-                        <%= image_tag book.cover_image %>
-                      <% else %>
-                        <p>No cover image available</p>
-                      <% end %>
-                    </div>
-                    <div class="w-5/7 lg:w-6/8">
-                      <div class="h-2/4">
-                        <div class="flex">
-                          <h3 class="font-semibold text-lg md:text-xl w-7/8"><%= book.title.truncate(17) %></h3>
-                          <%= turbo_frame_tag "book_#{book.id}_bookmark" do %>
-                            <%= render 'bookmarks/bookmark_button', book: book, bookmarked: current_user.bookmarks.exists?(book: book) %>
-                          <% end %>
-                        </div>
-                        <div class="w-7/8 flex justify-center items-center space-x-2 text-sm">
-                          <span>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cloud-upload" viewBox="0 0 16 16">
-                              <path fill-rule="evenodd" d="M4.406 1.342A5.53 5.53 0 0 1 8 0c2.69 0 4.923 2 5.166 4.579C14.758 4.804 16 6.137 16 7.773 16 9.569 14.502 11 12.687 11H10a.5.5 0 0 1 0-1h2.688C13.979 10 15 8.988 15 7.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 2.825 10.328 1 8 1a4.53 4.53 0 0 0-2.941 1.1c-.757.652-1.153 1.438-1.153 2.055v.448l-.445.049C2.064 4.805 1 5.952 1 7.318 1 8.785 2.23 10 3.781 10H6a.5.5 0 0 1 0 1H3.781C1.708 11 0 9.366 0 7.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383"/>
-                              <path fill-rule="evenodd" d="M7.646 4.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V14.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708z"/>
-                            </svg>
-                          </span>
-                          <p>Added by <strong><%= book.user.first_name %> <%= book.user.last_name %></strong></p>
-                        </div>
-                        <p class="mt-3 text-xs hidden md:block"><%= book.description.truncate(110) %></p>
-                      </div>
-                      <div class="h-3/4 lg:h-1/4 space-x-2 flex items-center align-center">
-                        <span class="text-lg md:text-xl font-semibold">
-                          <%= (book.reviews.average(:rating) || 0).round(0.5) %>
-                        </span>
-                        <div class="rating rating-md md:rating-xs">
-                          <% 5.times do |i| %>
-                            <input disabled type="radio" name="rating-<%= book.id %>" class="mask mask-star-2 bg-orange-100" <%= 'checked' if (book.reviews.average(:rating) || 0) > i %> aria-label="<%= i + 1 %> star">
-                          <% end %>
-                        </div>  
-                        <span class="hidden md:block">(<%= book.reviews.count %> Reviews)</span>
-                      </div>
-                      <div class="space-x-4 h-1/4 lg:flex hidden items-end">
-                        <label for="review-drawer" 
-                            class="btn py-6 rounded-xl btn-outline text-blue-500 border-[#E5E5E7] cursor-pointer"
-                            data-book-id="<%= book.id %>"
-                            data-action="click->book-review#open"
-                        >
-                          Review
-                        </label>
-                        <% if book.pdf_file.attached? %>
-                          <%= link_to "Read", download_book_path(book), 
-                              class: "btn py-6 rounded-xl bg-blue-500 text-white",
-                              method: :get,
-                              data: { action: "click->book-review#stopPropagation" } %>
-                        <% else %>
-                          <button class="btn py-6 rounded-xl bg-blue-500 text-white" disabled>
-                            No PDF Available
-                          </button>
-                        <% end %>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            <% end %>
-          </div>
-        </div>
+        <%= render "book_grid", books: @books %>
       </div>
-
-      <div class="drawer-side" data-book-review-target="drawer">
-        <label for="review-drawer" class="drawer-overlay"></label>
-        <div class="w-96 p-5 h-full overflow-y-scroll shadow-lg bg-[#F2F2F7] space-y-6 pt-12 mb-4">
-          <div class="flex items-center px-4 md:hidden">
-            <div class="w-full flex items-center justify-start">
-              <label for="review-drawer" class="top-4 right-4 hover:bg-gray-400 duration-100 hover:translate-1">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
-                  <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8"/>
-                </svg>
-              </label>
-            </div>
-
-          </div>
-          <div class="grid justify-center items-center space-y-4">
-            <div class="m-auto mb-3">
-              <img data-book-review-target="cover" src="" alt="Book cover" class="rounded-xl w-52">
-            </div>
-
-            <div class="text-center">
-              <h3 data-book-review-target="title" class="font-extrabold text-xl"></h3>
-              
-              <div class="flex text-sm justify-center items-center space-x-2">
-                <p>
-                  Added by 
-                  <span data-book-review-target="addedBy" class="font-semibold"></span>
-                </p>
-              </div>
-            </div>
-
-            <div class="m-auto space-y-6">
-              <div class="flex justify-center items-center space-x-3">
-                <div data-book-review-target="ratingStars" class="rating rating-sm"></div>
-              </div>
-              <div class="stats stats-horizontal">
-                <div class="stat">
-                  <div data-book-review-target="pages" class="stat-value text-sm">0</div>
-                  <div class="stat-desc">pages</div>
-                </div>
-
-                <div class="stat">
-                  <div data-book-review-target="rating" class="stat-value text-sm">0</div>
-                  <div class="stat-desc">ratings</div>
-                </div>
-
-                <div class="stat">
-                  <div data-book-review-target="reviewCount" class="stat-value text-sm">0</div>
-                  <div class="stat-desc">reviews</div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="px-6 space-y-2">
-            <div>
-              <h3 class="text-xl font-bold mb-2">Short description</h3>
-              <p data-book-review-target="description"></p>
-            </div>
-
-            <div data-book-review-target="allReviewsSection" class="space-y-4">
-              <h3 class="text-xl font-bold">All Reviews</h3>
-              <div data-book-review-target="allReviewsList" class="space-y-4"></div>
-            </div>
-
-            <div data-book-review-target="reviewForm">
-              <%= form_with(model: Review.new, url: reviews_path, local: false, class: "space-y-3") do |form| %>
-                <h3 class="text-xl font-bold">Review</h3>
-                
-                <%= form.hidden_field :book_id, data: { book_review_target: "bookId" } %>
-                
-                <div>
-                  <p>Rating</p>
-                  <div class="rating rating-sm">
-                    <% 5.times do |i| %>
-                      <%= form.radio_button :rating, i+1, class: "mask mask-star-2 bg-orange-400", "aria-label": "#{i+1} star" %>
-                    <% end %>
-                  </div>
-                </div>
-
-                <div>
-                  <p>About</p>
-                  <%= form.text_area :content, class: "textarea textarea-bordered w-full mt-3", placeholder: "Write your review..." %>
-                  <div class="flex justify-between mt-4">
-                    <%= form.submit "Add review", class: "btn bg-blue-500 text-white mt-4 rounded-xl" %>
-                    <button class="md:hidden btn text-blue-500 mt-4 rounded-xl ml-auto">Read book</button>
-                  </div>
-                </div>
-              <% end %>
-            </div>
-          </div>
-
-        </div>
-      </div>
+      <%= render "drawer_side" %>
     </div>
   </div>
 <% end %>
