--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: book, local: true, html: { multipart: true }) do |form| %>
+<%= form_with(model: book, local: false, html: { multipart: true }, data: { turbo: true }) do |form| %>
   <div class="space-y-6">
     <div class="flex gap-2">
       <div class="field input w-full">
