--- a/app/views/layouts/_drawer.html.erb
+++ b/app/views/layouts/_drawer.html.erb
@@ -4,28 +4,46 @@
         <div class="drawer-content bg-white h-full lg:rounded-l-2xl">
             <%= yield %>
         </div>
-        <div class="drawer-side">
-            <label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
-            <ul class="menu bg-blue-500 text-3xl px-12 font-semibold flex items-start gap-8 min-h-full w-80 p-4 text-white">
-                <li>
-                    <div class="py-28">
-                        <img alt="rubynor logo hvite forenklet" src="<%= asset_path('Rubynor_logo_forenklet_hvit.png') %>" width="300" />
+        <div class="drawer-side group duration-300 transition-all">
+        <label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
+
+        <div class="flex items-center justify-center h-2/6">
+            <div class="py-20 transition-all duration-300 h-full flex items-center justify-center">
+                <img class="h-12 group-hover:h-full transition-all duration-300" alt="rubynor logo hvite forenklet" src="<%= asset_path('Rubynor_logo_200x200.png') %>" />
+            </div>
+        </div>
+
+        <ul class="menu bg-blue-500 text-3xl px-12 font-semibold flex items-start gap-8 h-4/6 w-30 group-hover:w-64 transition-all duration-300 p-4 text-white">
+            <li class="w-full">
+            <div class="w-full flex items-center justify-center">
+                <span>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="white" class="bi bi-house" viewBox="0 0 16 16">
+                        <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z"/>
+                    </svg>
+                </span>
+                <p class="hidden group-hover:inline">Home</p>
+            </div>
+            </li>
+            <li class="w-full">
+            <div class="w-full flex items-center justify-center">
+                <div class="indicator">
+                <div class="indicator-item indicator-bottom hidden group-hover:inline">
+                    <button class="indicator-item badge">Coming soon</button>
+                </div>
+                <div>
+                    <div class="w-full flex items-center justify-center space-x-2">
+                    <span>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-list-ul" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M5 11.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5m-3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2"/>
+                        </svg>
+                    </span>
+                    <p class="hidden group-hover:inline">Wishlist</p>
                     </div>
-                </li>
-                <li class="w-full flex items-center">Home</li>
-                <li class="w-full flex items-center">
-                    <div class="indicator">
-                        <div class="indicator-item indicator-bottom">
-                            <button class="btn btn-primary">Coming soon</button>
-                        </div>
-                        <div>
-                            <p>Wishlist</p>
-                        </div>
-                    </div>
-                </li>
-                <%# <li class="w-full flex items-center">Account</li> %>
-                <%# <li class="w-full flex items-center">Settings</li> %>
-            </ul>
+                </div>
+                </div>
+            </div>
+            </li>
+        </ul>
         </div>
     </div>
 </div>
