Extract pdf file metadata

--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,3 +1,5 @@
+<%= csrf_meta_tags %>
+
 <%= form_with(model: book, local: false, html: { multipart: true }, data: { turbo: true }) do |form| %>
   <div class="space-y-6">
     <div class="flex gap-2">
