--- a/app/views/wishes/new.html.erb
+++ b/app/views/wishes/new.html.erb
@@ -1,9 +1,15 @@
 <% content_for :title, "New wish" %>
 
-<div class="md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">New wish</h1>
 
-  <%= render "form", wish: @wish %>
+<div class="bg-gray-50 h-screen w-screen flex items-center justify-center">
+  <div class="bg-white p-8 py-12 rounded-3xl text-gray-200 w-[30rem]">
+    <div class="text-center mb-12 space-y-3">
+      <h2 class="text-gray-700 text-3xl font-extrabold">Create Wish</h2>
+      <p class="text-gray-200">Fill out the details of the book below.</p>
+    </div>
 
-  <%= link_to "Back to wishes", wishes_path, class: "w-full sm:w-auto text-center mt-2 sm:mt-0 sm:ml-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
+    <%= turbo_frame_tag "new_book" do %>
+      <%= render "form", wish: @wish %>
+    <% end %>
+  </div>
 </div>
