Adding wish list

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,7 +3,7 @@
     <div class="drawer drawer-end">
       <input id="review-drawer" type="checkbox" class="drawer-toggle">
       <div class="drawer-content px-6 md:px-12">
-        <%= render "navbar" %>
+        <%= render "layouts/navbar" %>
         <div class="space-y-4">
           <h1 class="md:text-3xl md:font-bold font-semibold text-xl">Books</h1>
           <div class="flex">
