--- a/app/views/wishes/_wish.html.erb
+++ b/app/views/wishes/_wish.html.erb
@@ -1,14 +1,18 @@
-<div id="<%= dom_id wish %>" class="w-full sm:w-auto my-5 space-y-5">
-  <div>
-    <strong class="block font-medium mb-1">Title:</strong>
-    <%= wish.title %>
+<%= turbo_frame_tag dom_id(wish), class: "card shadow-xl relative space-y-3" do %>
+  <div class="card bg-base-100 overflow-hidden">
+    <div class="w-full">
+      <figure>
+        <% if wish.cover_image.attached? %>
+            <%= image_tag rails_blob_path(wish.cover_image, disposition: "attachment") %>
+        <% else %>
+            <p>No cover image available</p>
+        <% end %>
+      </figure>     
+
+    </div>
+    <div class="card-body w-full p-4">
+      <h2 class="font-bold text-xl"><%= wish.title %></h2>
+      <p>Suggested by <strong> <%= wish.user.first_name %></strong></p>
+    </div>
   </div>
-  <div>
-    <strong class="block font-medium mb-1">Author:</strong>
-    <%= wish.author %>
-  </div>
-  <div>
-    <strong class="block font-medium mb-1">User:</strong>
-    <%= wish.user_id %>
-  </div>
-</div>
+<% end %>
