--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,14 +1,16 @@
 <% content_for :title, "New book" %>
 
-<div class="md:bg-gray-50 h-screen w-screen flex items-center justify-center">
-  <div class="bg-white p-8 py-12 rounded-3xl text-gray-200 w-[30rem] overflow-y-scroll max-h-11/12">
-    <div class="text-center mb-12 space-y-3">
-      <h2 class="text-gray-700 text-3xl font-extrabold">Create Book</h2>
-      <p class="text-gray-200">Fill out the details of the book below.</p>
-    </div>
+<%= render 'layouts/drawer' do %>
+  <div class="md:bg-gray-50 h-screen w-full flex items-center justify-center">
+    <div class="bg-white p-8 py-12 rounded-3xl text-gray-200 w-[30rem] overflow-y-scroll max-h-11/12">
+      <div class="text-center mb-12 space-y-3">
+        <h2 class="text-gray-700 text-3xl font-extrabold">Create Book</h2>
+        <p class="text-gray-200">Fill out the details of the book below.</p>
+      </div>
 
-    <%= turbo_frame_tag "new_book" do %>
-      <%= render 'form', book: @book, categories: @categories %>
-    <% end %>
+      <%= turbo_frame_tag "new_book" do %>
+        <%= render 'form', book: @book, categories: @categories %>
+      <% end %>
+    </div>
   </div>
-</div>
+<% end %>
