--- a/app/views/bookmarks/_bookmark_button.html.erb
+++ b/app/views/bookmarks/_bookmark_button.html.erb
@@ -1,22 +1,24 @@
-<turbo-frame id="book_<%= book.id %>_bookmark">
-  <% if bookmarked %>
-    <%= button_to book_bookmarks_path(book), method: :delete, 
-        class: "btn p-2 shadow-xl bg-[#FC674E] rounded-lg",
-        form: { data: { turbo_frame: "book_#{book.id}_bookmark" } },
-        data: { bookmark_button: true } do %>
-      <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="white" class="bi bi-bookmark-fill" viewBox="0 0 16 16">
-        <path d="M2 2v13.5a.5.5 0 0 0 .74.439L8 13.069l5.26 2.87A.5.5 0 0 0 14 15.5V2a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2z"/>
-      </svg>
+<div class="tooltip" data-tip="Recommend book">
+  <turbo-frame id="book_<%= book.id %>_bookmark">
+    <% if bookmarked %>
+      <%= button_to book_bookmarks_path(book), method: :delete, 
+          class: "btn p-2 shadow-xl bg-[#FC674E] rounded-lg",
+          form: { data: { turbo_frame: "book_#{book.id}_bookmark" } },
+          data: { bookmark_button: true } do %>
+        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="white" class="bi bi-bookmark-fill" viewBox="0 0 16 16">
+          <path d="M2 2v13.5a.5.5 0 0 0 .74.439L8 13.069l5.26 2.87A.5.5 0 0 0 14 15.5V2a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2z"/>
+        </svg>
+      <% end %>
+    <% else %>
+      <%= button_to book_bookmarks_path(book), method: :post, 
+          class: "btn p-2 shadow-xl bg-white rounded-lg",
+          form: { data: { turbo_frame: "book_#{book.id}_bookmark" } },
+          data: { bookmark_button: true } do %>
+        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="#BDBDBD" class="bi bi-bookmark-plus" viewBox="0 0 16 16">
+          <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.74.439L8 13.069l5.26 2.87A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.26-2.342a.5.5 0 0 1 .484 0L13 14.566V2a1 1 0 0 0-1-1H4z"/>
+          <path d="M6 8a.5.5 0 0 0 .5.5h1.5V10a.5.5 0 0 0 1 0V8.5H10a.5.5 0 0 0 0-1H8.5V5.5a.5.5 0 0 0-1 0V7H5.5A.5.5 0 0 0 6 8z"/>
+        </svg>
+      <% end %>
     <% end %>
-  <% else %>
-    <%= button_to book_bookmarks_path(book), method: :post, 
-        class: "btn p-2 shadow-xl bg-white rounded-lg",
-        form: { data: { turbo_frame: "book_#{book.id}_bookmark" } },
-        data: { bookmark_button: true } do %>
-      <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="#BDBDBD" class="bi bi-bookmark-plus" viewBox="0 0 16 16">
-        <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.74.439L8 13.069l5.26 2.87A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.26-2.342a.5.5 0 0 1 .484 0L13 14.566V2a1 1 0 0 0-1-1H4z"/>
-        <path d="M6 8a.5.5 0 0 0 .5.5h1.5V10a.5.5 0 0 0 1 0V8.5H10a.5.5 0 0 0 0-1H8.5V5.5a.5.5 0 0 0-1 0V7H5.5A.5.5 0 0 0 6 8z"/>
-      </svg>
-    <% end %>
-  <% end %>
-</turbo-frame>
+  </turbo-frame>
+</div>
