--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,15 +10,35 @@
           <div class="flex flex-wrap gap-2 w-full lg:w-8/12" data-controller="book-search">
             <%= render "category_filters" %>
           </div>
-          
+
+
           <div class="hidden md:grid 2xl:flex justify-end w-4/12">
+
             <div class="lg:w-1/2 flex justify-end">
-              <%= render "reviewer_filter" %>
-            </div>
-            
-            <div class="lg:w-1/2 flex justify-end">
-              <div data-controller="book-search" class="ml-auto">
-                <%= render "select_sort" %>
+              <div class="dropdown dropdown-bottom dropdown-end">
+                <div tabindex="0" role="button" class="btn bg-transparent m-1 w-fit md:w-32 flex justify-start">
+                  <div class="hidden md:flex items-center justify-start w-4/5 gap-2">
+                    <span class="font-semibold">Filter</span>
+                  </div>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-funnel" viewBox="0 0 16 16">
+                      <path d="M1.5 1.5A.5.5 0 0 1 2 1h12a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.128.334L10 8.692V13.5a.5.5 0 0 1-.342.474l-3 1A.5.5 0 0 1 6 14.5V8.692L1.628 3.834A.5.5 0 0 1 1.5 3.5zm1 .5v1.308l4.372 4.858A.5.5 0 0 1 7 8.5v5.306l2-.666V8.5a.5.5 0 0 1 .128-.334L13.5 3.308V2z"/>
+                  </svg>
+                </div>
+                <ul tabindex="0" class="dropdown-content menu bg-base-100 rounded-box z-1 shadow-sm p-0 pb-6 w-72 font-semibold">
+                  <li class="w-full flex justify-end">
+                    <%= render "reviewer_filter" %>
+                  </li>
+
+                  <li class="w-full flex justify-end" data-controller="book-search">
+                    <%= render "select_sort" %>
+                  </li>
+
+                  <li class="w-full flex justify-end">
+                    <%= render "bookmark_filter" %>
+                  </li>
+
+
+                </ul>
               </div>
             </div>
           </div>
