--- a/app/views/books/_reviewer_filter.html.erb
+++ b/app/views/books/_reviewer_filter.html.erb
@@ -1,5 +1,5 @@
 <div class="dropdown dropdown-bottom dropdown-end">
-  <div tabindex="0" role="button" class="btn bg-transparent m-1 w-fit md:w-52 flex justify-start">
+  <div tabindex="0" role="button" class="btn bg-transparent m-1 w-full flex justify-start">
     <div class="hidden md:flex items-center justify-start w-4/5 gap-2">
       <span class="text-[#718096]">Reviewer:</span>
       <span class="font-semibold">
